--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,7 @@
   <version>1.0</version>
 
   <name>magmacrypt</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://www.edu.mirea.ru/</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -28,14 +27,35 @@
 
   <build>
     <pluginManagement>
-      <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
-        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
+        <plugin>
+          <groupId>com.iluwatar.urm</groupId>
+          <artifactId>urm-maven-plugin</artifactId>
+          <version>2.0.0</version>
+          <configuration>
+            <outputDirectory>./etc</outputDirectory>
+            <packages>
+              <param>ru.mirea.edu.magmacrypt.cipher</param>
+            </packages>
+            <ignores>
+            </ignores>
+            <includeMainDirectory>true</includeMainDirectory>
+            <includeTestDirectory>true</includeTestDirectory>
+            <presenter>mermaid</presenter>
+          </configuration>
+          <executions>
+            <execution>
+              <phase>process-classes</phase>
+              <goals>
+                <goal>map</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.1.0</version>
         </plugin>
-        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
           <version>3.0.2</version>
@@ -72,7 +92,6 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
-        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
         <plugin>
           <artifactId>maven-site-plugin</artifactId>
           <version>3.7.1</version>
